src/main/default/objects/AforzaLabsSegmentToolConfig__mdt/AforzaLabsSegmentToolConfig__mdt.object-meta.xml
<CustomObject>
    <label>Aforza Labs Segment Tool Config</label>
    <pluralLabel>Aforza Labs Segment Tool Configs</pluralLabel>
</CustomObject>