src/main/default/objects/AforzaLabsSegmentToolConfig__mdt/fields/Attribute_Code__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Code__c</fullName>
    <label>Attribute Code</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>