src/main/default/objects/AforzaLabsSegmentToolConfig__mdt/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field</label>
    <metadataRelationshipControllingField>AforzaLabsSegmentToolConfig__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Aforza_Labs_Segment_Tool_Configs</relationshipLabel>
    <relationshipName>Aforza_Labs_Segment_Tool_Configs</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
    <unique>true</unique>
</CustomField>