src/main/default/objects/AforzaLabsSegmentToolConfig__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object (Account)</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Aforza_Labs_Segment_Tool_Configs</relationshipLabel>
    <relationshipName>Aforza_Labs_Segment_Tool_Configs</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>