src/main/default/objects/AforzaLabsSegmentToolConfig__mdt/fields/Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Record_Types__c</fullName>
    <inlineHelpText>Enter the developer name(s) of record types you wish to restrict this functionality to. Separate multiple names with a comma</inlineHelpText>
    <label>Record Type(s)</label>
    <type>TextArea</type>
</CustomField>