src/main/default/objects/AforzaLabsSegmentToolConfig__mdt/validationRules/Object_Must_be_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Object_Must_be_Account</fullName>
    <active>true</active>
    <errorConditionFormula>Object__r.DeveloperName != &apos;Account&apos;</errorConditionFormula>
    <errorDisplayField>Object__c</errorDisplayField>
    <errorMessage>Object must be account</errorMessage>
</ValidationRule>